changes with educational purposes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Link to the CSS stylesheet -->
-    <link rel="stylesheet" href="styles-modified.css">
+    <link rel="stylesheet" href="solution.css">
 
     <!-- Title of the page -->
     <title>Student CV</title>
@@ -25,11 +25,14 @@
 
         <!-- Contact information -->
         <section id="contact">
-            <h2>Contact Information</h2>
-            <address>
-                <p>Email: janedoe@example.com</p>
-                <p>Phone: +1234567890</p>
-            </address>
+            <div class="inner">
+                <h2>Contact Information</h2>
+                <address>
+                    <p>Email: janedoe@example.com</p>
+                    <p>Phone: +1234567890</p>
+                </address>
+            </div>
+
         </section>
 
         <!-- Education details -->
