--- a/indexsolution.html
+++ b/indexsolution.html
@@ -25,11 +25,14 @@
 
         <!-- Contact information -->
         <section id="contact">
-            <h2>Contact Information</h2>
-            <address>
-                <p>Email: janedoe@example.com</p>
-                <p>Phone: +1234567890</p>
-            </address>
+            <div class="inner">
+                <h2>Contact Information</h2>
+                <address>
+                    <p>Email: janedoe@example.com</p>
+                    <p>Phone: +1234567890</p>
+                </address>
+            </div>
+
         </section>
 
         <!-- Education details -->
